force-app/main/default/objects/OAMProvider__mdt/OAMProvider__mdt.object-meta.xml
<CustomObject>
    <description>Metadado utilizado internamente pela classe OAMOAuthProvider.</description>
    <label>OAM Provider</label>
    <pluralLabel>OAM Providers</pluralLabel>
</CustomObject>