force-app/main/default/objects/OAMProvider__mdt/fields/AuthorizeURL__c.field-meta.xml
<CustomField>
    <fullName>AuthorizeURL__c</fullName>
    <label>Authorize URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>