force-app/main/default/objects/OAMProvider__mdt/fields/RedirectURL__c.field-meta.xml
<CustomField>
    <fullName>RedirectURL__c</fullName>
    <label>Redirect URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>