force-app/main/default/objects/OAMProvider__mdt/fields/Refresh_URL__c.field-meta.xml
<CustomField>
    <fullName>Refresh_URL__c</fullName>
    <label>Refresh URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>