force-app/main/default/objects/OAMProvider__mdt/fields/Scopes__c.field-meta.xml
<CustomField>
    <fullName>Scopes__c</fullName>
    <label>Scopes</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>