force-app/main/default/objects/OAMProvider__mdt/fields/SystemPassword__c.field-meta.xml
<CustomField>
    <fullName>SystemPassword__c</fullName>
    <label>System Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>