force-app/main/default/objects/OAMProvider__mdt/fields/SystemUser__c.field-meta.xml
<CustomField>
    <fullName>SystemUser__c</fullName>
    <label>System User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>