force-app/main/default/objects/OAMProvider__mdt/fields/TokenURL__c.field-meta.xml
<CustomField>
    <fullName>TokenURL__c</fullName>
    <label>Token URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>