force-app/main/default/objects/OAMProvider__mdt/fields/UserInfoURL__c.field-meta.xml
<CustomField>
    <fullName>UserInfoURL__c</fullName>
    <label>UserInfo URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>